--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,21 @@ h1{
     color: white;
 
 }
+
+h2{
+    font-size: 48px;
+}
+
+h3{
+    font-size: 24px;
+}
 h5{
     font-size: 24px;
     color: white;
+}
+
+p{
+    font-size: 18px;
 }
 small{
     font-size: 14px;
@@ -159,6 +171,7 @@ nav{
     width: 100%;
     height: 100%;
     z-index: -1;
+    max-height: 95vh;
 }
 
 @media (min-aspect-ratio: 16/9){
@@ -173,3 +186,50 @@ nav{
         height: 100%;
     }
 }
+
+
+
+/*ABOUT*/
+
+#about{
+    padding: 100px 0;
+    max-width: 100%;
+    background-image: url(https://templatemo.com/templates/templatemo_583_festava_live/images/edward-unsplash-blur.jpg);
+    background-size: cover;
+}
+.container{
+    margin: 0 15%;
+    display: flex;
+    max-width: 100%;
+}
+
+.about__left{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.about__h2{
+    margin-bottom: 24px;
+    color: white;
+}
+.about__h3{
+    margin-top: 24px;
+    margin-bottom: 8px;
+    color: white;
+}
+
+.about__para{
+    margin-bottom: 16px;
+    color: white;
+}
+
+.about__right{
+    width: 50%;
+}
+
+.about__right--img{
+    width: 95%;
+    border-radius: 22px;
+}
+
