--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,7 @@ nav{
     top: 1px;
     opacity: 1;
     transition: all 600ms ease;
+    border-radius: 20px;
 }
 .artist__hover--info{
     margin-top: 20px;
@@ -308,6 +309,35 @@ nav{
     margin-left: 12px;
 }
 
+
+.artist__right{
+    
+    margin-left: 140px;
+    
+}
+
+.artist__right--top{
+    position: relative;
+}
+.artist__hover1{
+    position: absolute;
+    top: -30px;
+    left: 1;
+    width: 100%;
+   height: 94%;
+    opacity: 0;
+    transition: all 300ms ease;
+    
+}
+
+.artist__hover1:hover{
+    opacity: 1;
+    background-color: #0a05035b;
+    top: 1px;
+    border-radius: 20px;
+}
+
+
 .artist__right--img{
     height: 360px;
     border-radius: 20px;
@@ -317,3 +347,33 @@ nav{
     margin-bottom: 20px;
 }
 
+.artist__right--bottom{
+    position: relative;
+}
+
+.artist__hover2{
+    position: absolute;
+    top: -20px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.artist__hover2:hover{
+    opacity: 1;
+    background-color: #0a05035b;
+    border-radius: 20px;
+    top: 1px;
+}
+
+.artist__hover--description1{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    height: 50%;
+    margin: 0 24px;
+    margin-top: 150px;
+    background-color: rgb(224, 178, 24);
+    border-radius: 20px;
+}
