--- a/styles.css
+++ b/styles.css
@@ -486,3 +486,79 @@ table{
     width: 22%;
     height: 16vh;
 }
+
+
+/*PLANS*/
+
+#plans{
+    padding: 120px 0;
+}
+
+.plans__wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.plans{
+    display: flex;
+    margin-top: 48px;
+    
+}
+
+.plan__left{
+    border: 5px dotted black;
+    padding: 50px;
+    margin: 0 12px;
+    height: 95%;
+    border-radius: 30px;
+}
+
+.plan__right{
+    border: 5px dotted black;
+    padding: 50px;
+    margin: 0 12px;
+    
+    border-radius: 30px;
+}
+.plan__price--wrapper{
+    margin-bottom: 8px;
+}
+.plan__price{
+    font-size: 32px;
+    color: black;
+    font-weight: bold;
+}
+
+.plan__small{
+    font-size: 18px;
+    color: rgb(0, 0, 0);
+    margin-right: 15px;
+}
+
+.plan__para{
+    color: rgba(0, 0, 0, 0.514);
+}
+
+.plan__lists{
+    column-count: 2;
+    margin: 32px 0;
+    padding-left: 32px;
+    color: rgba(0, 0, 0, 0.514);
+}
+.plan__list{
+    font-size: 18px;
+    margin: 0 10px 10px 0;
+}
+
+.plan__ticket--wrapper{
+    margin-top: 38px;
+    padding: 0 6px;
+    
+}
+.plan__ticket{
+    color: rgb(216, 216, 71);
+    text-decoration: underline;
+    font-size: 18px;
+}
