--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,11 @@ nav{
     margin: 10px;
     padding: 10px 20px;
     font-size: 18px;
-    
+    transition: all 400ms ease;
+}
+
+.nav__link:hover{
+    color: red;
 }
 
 
@@ -113,6 +117,12 @@ nav{
     border: 2px solid transparent;
     border-radius: 24px;
     padding: 10px 20px;
+    transition: all 400ms ease;
+}
+
+.nav__link--primary:hover{
+    background-color: red;
+    transition: all 400ms ease;
 }
 
 
@@ -152,6 +162,9 @@ nav{
 .hero__bottom--social{
     font-size: 24px;
     margin-bottom: 8px;
+}
+.hero__img{
+    margin-right: 12px;
 }
 
 .hero__bottom--span{
@@ -208,6 +221,10 @@ nav{
     
 }
 
+.about__container{
+    padding: 0 124px;
+}
+
 .about__left{
     width: 50%;
     display: flex;
@@ -247,7 +264,9 @@ nav{
 .artist__container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
+    
     
 }
 .artist__h2{
@@ -265,7 +284,7 @@ nav{
 .artist__left--img{
     height: 800px;
     border-radius: 20px;
-    margin-left: 20%;
+    
     
 }
 .artist__left{
@@ -275,7 +294,7 @@ nav{
 .artist__hover{
     position: absolute;
     top: -100px;
-    left: 105px;
+    left: 1px;
     width: 100%;
     height: 100%;
     opacity: 0;
@@ -313,7 +332,7 @@ nav{
 
 .artist__right{
     
-    margin-left: 140px;
+    margin-left: 20px;
     
 }
 
@@ -327,7 +346,7 @@ nav{
     width: 100%;
    height: 94%;
     opacity: 0;
-    transition: all 300ms ease;
+    transition: all 600ms ease;
     
 }
 
@@ -358,7 +377,7 @@ nav{
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: all 300ms ease;
+    transition: all 600ms ease;
 }
 
 .artist__hover2:hover{
@@ -772,7 +791,7 @@ table{
 .footer__bottom{
     background-color: black;
     padding: 48px;
-    
+    padding: 98px 0;
     
     
 }
@@ -785,11 +804,20 @@ table{
 .footer__bottom--links{
     display: flex;
 }
+
 .footer__bottom--link{
     margin-right: 12px;
     list-style: none;
     font-size: 18px;
+    transition: all 400ms ease;
+    color: white;
+    cursor: pointer;
 }
+
+.footer__bottom--link:hover{
+    color: red;
+}
+
 
 .footer__bottom--contact{
     display: flex;
@@ -800,10 +828,21 @@ table{
 .footer__bottom--number{
     margin-bottom: 12px;
     font-size: 18px;
+    transition: all 400ms ease;
+}
+
+.footer__bottom--number:hover{
+    color: red;
+    transition: all 400ms ease;
 }
 
 .footer__bottom--email{
     font-size: 18px;
+    transition: all 300ms ease;
+}
+.footer__bottom--email:hover{
+    color: red;
+    transition: all 300ms ease;
 }
 
 .footer__bottom--location{
@@ -836,6 +875,7 @@ table{
     display: flex;
     
     padding: 48px;
+    padding: 68px 0;
 }
 
 .copyright__para{
@@ -853,4 +893,11 @@ table{
 .copyright__link{
     margin-right: 24px;
     font-size: 18px;
+    transition: color 300ms ease-out;
 }
+.copyright__link :hover{
+    color: red;
+    transition: color 300ms ease-in;
+}
+
+
