--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,9 @@ nav{
     display: flex;
     flex-wrap: inherit;
     align-items: center;
-    justify-content: space-between;
-    margin: 0 5%;
-    padding: 0 6%;
-    width: 90%;
+    justify-content: center;
+    
+    
 }
 
 .nav__brand{
