--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,9 @@ nav.sticky {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 254px 167px;
+
+  padding: 354px 0 167px  0;
+  
 }
 
 .btn {
@@ -144,7 +146,7 @@ nav.sticky {
 .hero__bottom {
   display: flex;
   justify-content: space-around;
-  padding-top: 120px;
+  padding-top: 180px;
 }
 .hero__bottom--date {
   font-size: 24px;
