--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,11 @@ small {
 a {
   text-decoration: none;
   color: white;
-  cursor: active;
+ 
+  
+}
+li{
+    list-style: none;
 }
 
 .header__container {
