--- a/styles.css
+++ b/styles.css
@@ -653,6 +653,9 @@ table {
   border-radius: 10px;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 }
+.contact__nav--contact.disabled{
+  
+}
 
 .google__maps--map.active {
   display: flex;
