--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ nav.sticky {
   font-size: 18px;
   transition: all 400ms ease;
 }
-.nav__link.active{
+.nav__link.active {
   color: red;
 }
 
@@ -261,9 +261,8 @@ nav.sticky {
 .about__right--img {
   width: 85%;
   border-radius: 22px;
-  
 }
-.about__img--bubble{
+.about__img--bubble {
   width: 80%;
   position: absolute;
   top: 60%;
@@ -278,7 +277,7 @@ nav.sticky {
   border-radius: 20px;
 }
 
-.about__img--user{
+.about__img--user {
   padding: 30px;
   background-color: yellow;
   border-radius: 40px;
@@ -287,18 +286,17 @@ nav.sticky {
   justify-content: center;
   margin-right: 24px;
 }
-.fa-user{
+.fa-user {
   font-size: 24px;
 }
 
-.about__img--header{
+.about__img--header {
   font-size: 34px;
   margin-bottom: 14px;
 }
-.about__img--para{
-  color: rgb(131, 124, 124);
+.about__img--para {
+  color: rgb(48, 45, 45);
 }
-
 
 /*MEET ARTSISTS*/
 
@@ -694,8 +692,7 @@ table {
   border-radius: 10px;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 }
-.contact__nav--contact.disabled{
-
+.contact__nav--contact.disabled {
 }
 
 .google__maps--map.active {
@@ -974,6 +971,17 @@ table {
   .contact__form {
     width: 70%;
   }
+  .about__img--bubble {
+    top: 50%;
+    left: 20%;
+    height: 40%;
+  }
+  .about__img--user {
+    padding: 20px;
+  }
+  .about__img--header {
+    margin-bottom: 6px;
+  }
 }
 
 @media (max-width: 1100px) {
@@ -1019,11 +1027,6 @@ table {
 }
 
 @media (max-width: 992px) {
-  .nav__container {
-    margin: 0 24px;
-    width: 50%;
-  }
-
   .nav__brand {
     font-size: 18px;
   }
@@ -1050,6 +1053,18 @@ table {
   .footer__bottom--wrapper {
     flex-wrap: wrap;
   }
+  .about__img--bubble {
+    height: 30%;
+    width: 100%;
+    top: 30%;
+    left: 10%;
+  }
+  .about__img--user {
+    padding: 15px;
+  }
+  .about__img--header {
+    margin: 0;
+  }
 }
 
 @media (max-width: 768px) {
@@ -1058,7 +1073,7 @@ table {
   }
 
   .nav__container {
-    width: 90%;
+    margin: 0 12px;
     display: flex;
     justify-content: space-between;
   }
@@ -1103,6 +1118,10 @@ table {
 
   .footer__links--wrapper {
     margin-bottom: 12px;
+  }
+  .about__img--bubble{
+    top: 50%;
+    height: 40%;
   }
 }
 
@@ -1170,6 +1189,9 @@ table {
   .nav__links.active a:hover {
     color: red;
   }
+  .about__left{
+    text-align: center;
+  }
 
   .footer__top--wrapper {
     display: flex;
@@ -1191,5 +1213,20 @@ table {
   }
   .footer__bottom--contact {
     margin-bottom: 12px;
+  }
+  .about__right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .about__img--bubble{
+    top: 30%;
+    height: 60%;
+    left: 0%;
+    flex-wrap: nowrap;
+    
+  }
+  .about__img--user{
+    margin-left: 4px;
   }
 }
